2000-04-21  Dan Winship  <danw@helixcode.com>

	* e-msg-composer.c (e_msg_composer_set_headers): 
	(e_msg_composer_set_body_text): new functions
	(exit_cb): Connect "Exit" menu item finally.

	* e-msg-composer-hdrs.c: const poisoning
	(e_msg_composer_hdrs_set_subject): 
	(e_msg_composer_hdrs_get_subject): new functions

	* e-msg-composer-address-entry.c: const poisoning

2000-04-20  Dan Winship  <danw@helixcode.com>

	* e-msg-composer.c (get_editor_text, set_editor_text): new
	functions to get and set the contents of the HTML editor via
	Bonobo::PersistStream.
	(build_message): use get_editor_text. This works again.

2000-04-17  Dan Winship  <danw@helixcode.com>

	* e-msg-composer.c (build_message): Change
	camel_mime_message_new_with_session to camel_mime_message_new

2000-03-17  bertrand  <bertrand@helixcode.com>

	* e-msg-composer.c (create_menubar): Pass the composer as the data
	for the menubar callbacks.

2000-03-12  Matt Loper  <matt@helixcode.com>

	* Makefile.am: Modified to make the composer into a library, to be
	used by the mail component.

2000-03-07  Ettore Perazzoli  <ettore@helixcode.com>

	* e-msg-composer.c (create_toolbar): Pass the composer as the data
	for the toolbar callbacks.
	(e_msg_composer_construct): Connect the "changed" signal of the
	attachment bar to `attachment_bar_changed()'.
	(attachment_bar_changed): Renamed to `attachment_bar_changed_cb'.

2000-03-02  Ettore Perazzoli  <ettore@helixcode.com>

	* e-msg-composer.c (e_msg_composer_new): Precondition:
	gtk_main_level() greater than zero.
	(e_msg_composer_construct): Likewise.
	(create_menus): New function.  Set up menus through
	BonoboUIHandler.
	(e_msg_composer_construct): Use it.

	* main.c (main): Initialize Bonobo.

	* e-msg-composer.c (init): Initialize `uih' and `editor' to NULL.
	Do not init `text' and `text_scrolled_window' anymore.
	(destroy): Unref `uih'.
	(e_msg_composer_construct): Create a new BonoboUIHandler and put
	it into `uih'.